# apoptotic_loader

./: .gitignore  README.md  __init__.py  apoptotic_layer.py  apoptotic_loader.py  apoptotic_stack.launch.py  checkpoint_registry_node.py  conftest.py  custom_manager.py  default.yaml  drift_observer_node.py  manager_node.py  mock_drift_publisher.py  mock_rclpy.py  mock_std_msgs.py  package.xml  run_tests.py  safe_stop_node.py  setup.py  test_checkpoint_registry.py  test_drift_observer.py  test_manager.py  test_safe_stop.py  test_types.py  types.py
apoptotic_loader/: apoptotic_manager.py  checkpoint_registry.py  drift_observer.py  safe_stop_controller.py
config/: default.yaml
launch/: apoptotic_stack.launch.py
ros2_ws/src/apoptotic_loader/: package.xml  setup.cfg  setup.py  test_windows.py
ros2_ws/src/apoptotic_loader/apoptotic_loader/: __init__.py  apoptotic_manager.py  checkpoint_registry.py  drift_observer.py  safe_stop_controller.py
ros2_ws/src/apoptotic_loader/config/: default.yaml
ros2_ws/src/apoptotic_loader/launch/: apoptotic_stack.launch.py
ros2_ws/src/apoptotic_loader/resource/: apoptotic_loader
test/: test_nodes.py  test_standalone.py
