<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apoptotic_loader</name>
  <version>0.1.0</version>
  <description>
    Apoptotic Model Loading for Robotics AI - programmed cell death for machine intelligence.
    Every AI model on a robot gets a 24-hour TTL. At expiration it reloads from a
    cryptographically verified checkpoint. No accumulated drift. No silent degradation.
  </description>
  <maintainer email="craig.mcclurkin@louisville.edu">Craig McClurkin</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://specialtyconsultants.co</url>
  <url type="repository">https://github.com/specialtyconsultants/apoptotic_loader</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
